--- a/styles/sections.css
+++ b/styles/sections.css
@@ -2,7 +2,7 @@
     img {
     height: 100%;
     object-fit: cover;
-}
+    }
 
 
     .card {
@@ -10,7 +10,7 @@
         position: relative;
         overflow: hidden;
 
-        &::before {
+        &::before { 
             content: "";
             position: absolute;
             inset: 0;
@@ -26,7 +26,11 @@
             position: absolute;
             bottom: 0;
             
-            padding: 24x;
+            padding: 24px;
+
+            &:has(.text-lg) {
+                padding: 12px
+            }
 
             h2 {
                 margin-top: 8px;
